--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   text-align: center;
   width: 100%;
   padding: 10px;
-  background-color: var(--tg-theme-secondary-bg-color, #ececec);
+  background: var(--tg-theme-secondary-bg-color, #ececec);
 }
