--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,11 @@
   padding: 10px;
   background: var(--tg-theme-secondary-bg-color, #ececec);
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  color: var(--tg-theme-text-color, #000);
+}
