--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,25 @@
   padding: 10px;
   background: var(--tg-theme-bg-color, #ececec);
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
-  color: var(--tg-theme-text-color, #000);
+
+@media (prefers-color-scheme: light) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p {
+    color: var(--tg-theme-text-color, #000);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p {
+    color: var(--tg-theme-section-header-text-color, #fff);
+  }
 }
