--- a/src/components/MainForm/mainForm.css
+++ b/src/components/MainForm/mainForm.css
@@ -44,5 +44,5 @@
 }
 .section {
   padding: 10px 0 20px 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid var(--tg-theme-subtitle-text-color);
 }
