--- a/src/components/MainForm/mainForm.css
+++ b/src/components/MainForm/mainForm.css
@@ -20,6 +20,7 @@
   padding-left: 12px !important;
 }
 .form-input {
+  color: var(--tg-theme-text-color);
   width: 100%;
   padding: 7px;
   border-radius: 18px;
