--- a/src/components/MainForm/mainForm.css
+++ b/src/components/MainForm/mainForm.css
@@ -37,6 +37,10 @@
   color: var(--tg-theme-hint-color, gray);
   opacity: 1;
 }
+.form-input:active {
+  outline: none !important;
+  border: 2px solid var(--tg-theme-button-color, blue);
+}
 .form-input:focus {
   outline: none !important;
   border: 2px solid var(--tg-theme-button-color, blue);
