last child border

--- a/src/components/MainForm/mainForm.css
+++ b/src/components/MainForm/mainForm.css
@@ -57,5 +57,8 @@
 }
 .section {
   padding: 10px 0 20px 0;
-  border-bottom: 1px solid var(--tg-theme-subtitle-text-color);
+  border-bottom: 1px solid var(--tg-theme-subtitle-text-color, gray);
+}
+.section:last-child {
+  border-bottom: none;
 }
