--- a/src/components/FormatButton/formatButton.css
+++ b/src/components/FormatButton/formatButton.css
@@ -1,6 +1,6 @@
 .button {
   align-items: center;
-  background: var(--tg-theme-button-color);
+  background: var(--tg-theme-button-color, blue);
   border-radius: 18px;
   box-sizing: border-box;
   color: #121212;
@@ -14,7 +14,7 @@
   line-height: 1;
   margin: 0;
   outline: none;
-  padding: 1rem 1.2rem;
+  padding: 0.8rem 1rem;
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
