--- a/src/components/MainForm/mainForm.css
+++ b/src/components/MainForm/mainForm.css
@@ -34,6 +34,7 @@
   align-items: center;
 }
 .form-input::placeholder {
+  font-size: 16px;
   color: var(--tg-theme-hint-color, gray);
   opacity: 1;
 }
