--- a/src/components/ActivityTaskForm/activityTaskForm.css
+++ b/src/components/ActivityTaskForm/activityTaskForm.css
@@ -19,3 +19,6 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.hint {
+  color: var(--tg-theme-hint-color, gray);
+}
