--- a/src/components/MainForm/mainForm.css
+++ b/src/components/MainForm/mainForm.css
@@ -57,6 +57,7 @@
   width: 100%;
 }
 .section {
+  background: var(--tg-theme-section-bg-color, #ababab);
   padding: 10px 0 20px 0;
   border-bottom: 1px solid var(--tg-theme-subtitle-text-color, gray);
 }
