--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -5,7 +5,8 @@
 }
 .title_big {
   font-size: 28px;
-  line-height: 44px;
+  line-height: 54px;
+  margin-bottom: 10px;
 }
 .title_default {
   font-size: 20px;
