--- a/src/components/ActivityTaskForm/activityTaskForm.css
+++ b/src/components/ActivityTaskForm/activityTaskForm.css
@@ -12,10 +12,16 @@
 .react-datepicker {
   color: var(--tg-theme-text-color, #000);
   background-color: var(--tg-theme-secondary-bg-color, #fbfbfb) !important;
+  border: none !important;
 }
 
 .react-datepicker__header {
   background-color: var(--tg-theme-secondary-bg-color, #fbfbfb) !important;
+  border: 1px solid var(--tg-theme-hint-color, gray) !important;
+}
+
+.react-datepicker__time-container {
+  border-left: 1px solid var(--tg-theme-hint-color, gray) !important;
 }
 
 .react-datepicker__time {
