--- a/src/components/ActivityTaskForm/activityTaskForm.css
+++ b/src/components/ActivityTaskForm/activityTaskForm.css
@@ -17,7 +17,7 @@
 
 .react-datepicker__header {
   background-color: var(--tg-theme-secondary-bg-color, #fbfbfb) !important;
-  border: 1px solid var(--tg-theme-hint-color, gray) !important;
+  border-bottom: 1px solid var(--tg-theme-hint-color, gray) !important;
 }
 
 .react-datepicker__time-container {
