--- a/src/components/ActivityTaskForm/activityTaskForm.css
+++ b/src/components/ActivityTaskForm/activityTaskForm.css
@@ -52,6 +52,30 @@
   color: var(--tg-theme-button-text-color, black) !important;
 }
 
+.react-datepicker__time-container
+  .react-datepicker__time
+  .react-datepicker__time-box
+  ul.react-datepicker__time-list
+  li.react-datepicker__time-list-item--selected {
+  background-color: var(--tg-theme-button-color, blue) !important;
+  color: var(--tg-theme-button-text-color, black) !important;
+}
+
+.react-datepicker__day--selected,
+.react-datepicker__day--in-selecting-range,
+.react-datepicker__day--in-range,
+.react-datepicker__month-text--selected,
+.react-datepicker__month-text--in-selecting-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--selected,
+.react-datepicker__quarter-text--in-selecting-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--selected,
+.react-datepicker__year-text--in-selecting-range,
+.react-datepicker__year-text--in-range {
+  background-color: var(--tg-theme-button-color, blue) !important;
+  color: var(--tg-theme-button-text-color, black) !important;
+}
 input[type="number"] {
   appearance: textfield;
   -moz-appearance: textfield;
